--- a/views/houses/show.html
+++ b/views/houses/show.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{house.name}}</title>
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <title></title>
 </head>
+
 <body>
-  <h1>{{house.name}}</h1>
-  <img src="{{house.img_url}}" alt="{{house.name}}">
-  <h2>Students</h2>
-  {{#students}}
-    <a href="/students/{{id}}">{{fname}} {{lname}}</a>
-  {{/students}}
+
+
 </body>
+
+<script src="/static/js/main.js"></script>
+
 </html>
